# DialectConvert

./: .env.example  .env.prod.example  .gitattributes  .gitignore  AGENTS.md  README.md  requirements.txt  任务未完成记录.md  前端协作开发说明_CosyVoice版.md  声临其境_复赛冲刺分工计划.md  声临其境项目计划书.docx  技术文档.md
FireRedASR2S/: .gitignore  1.24.6  pyproject.toml  requirements.txt  start_demo1_web.ps1
FireRedASR2S/asr_service/: app.py  asr_engine.py  audio_frontend.py  audio_io.py  audio_quality.py  cloud_asr.py  config.py  schemas.py  system_engine.py
FireRedASR2S/deploy/aliyun/: deploy_prod.md  dialect_service.service  env.example.api-clone.prod  env.example.prod  nginx_public.conf  openvoice_runtime.md  requirements-prod.txt
FireRedASR2S/dialect_service/: __init__.py  adapters.py  app.py  pipeline_engine.py  schemas.py
FireRedASR2S/docs/: demo1_audio_frontend.md  demo1_voice_clone_plan.md  服务器上传部署实现方法.md
FireRedASR2S/fireredasr2s/: __init__.py  fireredasr2s_cli.py  fireredasr2system.py
FireRedASR2S/public_web/: app.js  index.html  styles.css
FireRedASR2S/runtime_data/: check_head_urls.py  tmp_asr_speed_bench.py  tmp_call_web_api.py  tmp_call_web_api_after_fix.py  tmp_download_test_audios.py  tmp_generate_test_audios.py  tmp_generate_test_wavs.py  tmp_rerun_openvoice_now.py  tmp_run_asr_testset.py  tmp_run_asr_testset_wav.py  tmp_run_full_pipeline_now.py  tmp_run_openvoice_full.py  tmp_view_gradio_api.py
FireRedASR2S/scripts/: install_ffmpeg_from_github.ps1  start_dialect_service_prod.sh
FireRedASR2S/web_demo/: __init__.py  app.py  client.py  run_audio16k_eval.py  view_models.py
(+98 files in other folders)
